vcluster_versioned_docs/version-0.37.0/learn-how-to/control-plane/container/safely-upgrade-etcd.mdx
---
title: Safely upgrade ETCD v3.5 -> v3.6
sidebar_label: Upgrade ETCD to v3.6
sidebar_position: 6
toc_max_heading_level: 3
description: Learn how to upgrade ETCD to v3.6 in your tenant cluster.
---

import EtcdUpgradeGuide from '../../../_fragments/safely-upgrade-etcd.mdx'
import BackingStore from '../../../_partials/config/controlPlane/backingStore.mdx'

## Upgrade ETCD from v3.5 to v3.6 in vCluster

In vCluster, etcd can serve as the underlying storage backend, similar to vanilla Kubernetes. Its version can be configured either explicitly using a `controlPlane.backingStore.etcd.deploy.statefulSet.image.tag` section in the `vcluster.yaml` or implicitly derived from the vCluster version.

Before upgrading, back up your data. Deployed etcd doesn't support `vcluster snapshot create`, so back it up with its own tooling instead. For embedded etcd, take a [vCluster snapshot](../../../manage/backup-restore/backup.mdx). See [Back up and restore](../../../configure/vcluster-yaml/control-plane/components/backing-store/etcd/deploy.mdx#back-up-and-restore) for details.

etcd has identified and fixed an additional scenario that may cause upgrade failures when moving from etcd v3.5 to v3.6, specifically during rolling replacement upgrades where a new learner may receive an incorrect snapshot from an older member (≤ v3.5.19). This issue, detailed in [issue #20793](https://github.com/etcd-io/etcd/issues/20793), was addressed in etcd v3.5.24 using [PR #20797](https://github.com/etcd-io/etcd/pull/20797). <br/>
The recommended solution is to first upgrade to etcd v3.5.24 (or higher) before proceeding to v3.6. For users on v3.5.20-v3.5.23 from a fresh install, a direct upgrade to v3.6 is safe. <br/>
To safely upgrade etcd in vCluster, continue reading this page for detailed steps.<br/><br/>
For more details, refer to the [etcd upgrade guide](https://etcd.io/docs/latest/upgrades/upgrade_3_6/).

<EtcdUpgradeGuide />

## Config reference

<BackingStore />
